# robot-monitoring-parser

./: .gitignore  README.md  pyproject.toml
report-parser/: pyproject.toml
report-parser/report_parser/: test_module.py
report-parser/report_parser/results/: log.html  output.xml  second_suite.robot
report-parser/tests/: test_report_parser.py
robotframework-parser/: pyproject.toml
robotframework-parser/src/robot_parser/: parser.py  robot-parser.py
robotframework-parser/src/robot_parser/results/: report.html
robotframework-parser/src/robot_parser/suite_visitor/: suite_visitor.py
robotframework-parser/src/robot_parser/test_visitor/: test_visitor.py
robotframework-parser/src/robot_parser/utils/: random_pipeline_id.py
src/robot_parser/: robot_parser.py
src/robot_parser/suite_visitor/: suite_visitor.py
src/robot_parser/utils/: http_client.py  timezone_converter.py
tests/: test_robot_parser.py
