[tool.poetry]
name = "report-parser"
version = "0.1.0"
description = ""
authors = ["ltsuda <leonardo.tsuda@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.8"
robotframework = "^3.2.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
